--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-100">
   <head>
-    <title>DevOps Internship app</title>
+    <title>DevOps Internship School</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -51,7 +51,7 @@
       <div>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
-		  <a class="nav-link active" href="/update">Request data update</a>
+		  <a class="nav-link active" href="/update">Update</a>
         </nav>
       </div>
     </header>
