--- a/app/templates/base_cover.html
+++ b/app/templates/base_cover.html
@@ -52,6 +52,7 @@
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="/">Home</a>
 		  <a class="nav-link active" href="/update">Update</a>
+          <a class="nav-link active" href="/delete">Delete</a>
         </nav>
       </div>
     </header>
